# functions/swagger.yaml
@@ -188,30 +188,15 @@ paths:
         - "Expense"
       parameters:
         - in: query
-          name: description
-          description: "Order by description"
+          name: filter
+          description: "Order by a certain attribute"
           schema:
-            type: boolean
-        - in: query
-          name: amount
-          description: "Order by amount"
-          schema:
-            type: boolean
-        - in: query
-          name: date
-          description: "Order by date"
-          schema:
-            type: boolean
+            type: string
         - in: query
           name: desc
           description: "Descending order"
           schema:
             type: boolean
-        - in: query
-          name: account
-          description: "Filter by account"
-          schema:
-            type: string
         - in: path
           name: uid
           required: true
